# rtic-fcfs

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs
